# mgflow

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: build-and-push.yml
backend/: bluesky.py  database.py  main.py  models.py  poller.py  schemas.py
backend/routers/: clip.py  config.py  feed.py  save.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
